Fixed ugly background overlap effect showing up when printing overview page

--- a/data/allpasswords/allpasswords.less
+++ b/data/allpasswords/allpasswords.less
@@ -159,6 +159,14 @@ body
   top: 0px;
 }
 
+.media-print()
+{
+  .site-name
+  {
+    background-color: transparent;
+  }
+}
+
 .password-container
 {
   border-top: 1px solid #888;
